@@ -23,7 +23,7 @@
     - direct messages with pictures from the twitter app
     - launcher page needs to refresh on start as well
     - RTL not working again?
-    - twipple thumbnails
+    - twipple thumbnails (http://p.twipple.jp/wiki/API_Thumbnhenail)
 
     Version 2.5.0
         - auto-complete hashtags
